--- a/src/RS_Lib/RS_Lib.csproj
+++ b/src/RS_Lib/RS_Lib.csproj
@@ -45,6 +45,7 @@
     <Compile Include="No4-Stretch+OIF\CalcOIF.cs" />
     <Compile Include="No3-BasicInfo\Contrast.cs" />
     <Compile Include="No4-Stretch+OIF\ContrastStretch.cs" />
+    <Compile Include="No6-KT+HSI\KT_Paras.cs" />
     <Compile Include="No7-Conv\Conv.cs" />
     <Compile Include="No3-BasicInfo\GLCM.cs" />
     <Compile Include="No3-BasicInfo\HistoData.cs" />
