卷积&自定义卷积核计算

--- a/src/MainApp/MainApp.csproj
+++ b/src/MainApp/MainApp.csproj
@@ -107,6 +107,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MiscOperation.cs" />
     <Compile Include="Operation_2-4.cs" />
     <Compile Include="Operation_6-8.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
