--- a/src/RS_Lib/RS_Lib.csproj
+++ b/src/RS_Lib/RS_Lib.csproj
@@ -49,6 +49,7 @@
     <Compile Include="No4-Stretch+OIF\CalcOIF.cs" />
     <Compile Include="No3-BasicInfo\Contrast.cs" />
     <Compile Include="No4-Stretch+OIF\ContrastStretch.cs" />
+    <Compile Include="No6-KT+HSI\BandMath.cs" />
     <Compile Include="No6-KT+HSI\KT_Paras.cs" />
     <Compile Include="No7-Conv\Conv.cs" />
     <Compile Include="No3-BasicInfo\GLCM.cs" />
@@ -63,8 +64,11 @@
     <Compile Include="No6-KT+HSI\RGBHSI.cs" />
     <Compile Include="No7-Conv\GaussLow.cs" />
     <Compile Include="No7-Conv\Grad.cs" />
+    <Compile Include="No7-Conv\Lap.cs" />
+    <Compile Include="No7-Conv\Robert.cs" />
     <Compile Include="No7-Conv\Mean.cs" />
     <Compile Include="No7-Conv\Median.cs" />
+    <Compile Include="No7-Conv\Sobel.cs" />
     <Compile Include="RsImage\RsImage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="No4-Stretch+OIF\Stretch.cs" />
